common-applications/test-environment/openeuler-compass-ci/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-compass-ci-beta
  name: openeuler-compass-ci-beta
