common-applications/test-environment/openeuler-compass-ci/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-deployment
  namespace: openeuler-doc-search
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/compassciweb-beta:v1.1679033642
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-configmap
          subPath: nginx.conf
        - mountPath: /var/log
          name: log-volume
      volumes:
      - name: nginx-configmap
        configMap:
          defaultMode: 420
          name: nginx-configmap
      - name: log-volume
        persistentVolumeClaim:
          claimName: log-volume
