common-applications/test-environment/openeuler-compass-ci/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: openeuler-compass-ci-beta
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: web
  type: ClusterIP
