common-applications/test-environment/openeuler-compass-ci/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: compass-ci-ingress
  namespace: openeuler-compass-ci-beta
spec:
  tls:
    - hosts:
      - compass-ci.test.osinfra.cn
      secretName: compass-ci-web-tls
  rules:
    - host: compass-ci.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: web-service
            servicePort: 80
          path: /
